--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 <a-scene embedded
 	        arja="matrixcideType: 3x3;=
 		"vr-mode-ui="enabled: flse">
-	<a-marker type="barcode" value="5">
       <a-box position="0 0.5 0"
-	     material="color: blue;">
- 		</a-box>
-		<a-marker>
-		</a-cemera>
-	</a-cemera>
+	   </a-marker type="barcode" value="3">
+	     <a-image src="Cat.jpg"></a-image>
+</a-marker>
+	</a-marker type="barcode" value="5">
+	<a-box position="0 0.5 0"
+	material="color: blue;">
+ </a-box>
+<a-marker>
+</a-cemera>
+</a-cemera>
 </a-scene>
 <body>
 </html>
